--- a/docs/Lectures/Theme_3-Model_Engineering/Lecture_13-Scikit-Learn/Lecture_13-Scikit-Learn.ipynb
+++ b/docs/Lectures/Theme_3-Model_Engineering/Lecture_13-Scikit-Learn/Lecture_13-Scikit-Learn.ipynb
@@ -397,7 +397,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -1424,7 +1423,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Or, using `.sum().` we can see that the model predicted correctly 145 samples out of the 150 samples in the dataset `X`. The above function `mean()` just calculates the average as 145/150."
+    "Or, using `.sum().` we can see that the model predicted correctly 145 samples out of the 150 samples in the dataset. The above function `mean()` just calculates the average as 145/150."
    ]
   },
   {
@@ -1667,7 +1666,7 @@
    "source": [
     "This example was not the best though, because the obtained score on the unseen test data (97.37%) is typically lower than the accuracy obtained by evaluating the model on the training data (96.67% in this case). This is probably due to the small dataset. In practice, evaluating a machine learning model on the training data is unacceptable in all scenarios.\n",
     "\n",
-    "Finally, how do we know how many nearest neighbors to use: 5, 7, 29? Well, it is not easy to answer that question. First, we can make an intuitive guess based on our understanding of the dataset, or second, we can run the model several times using different numbers of nearest neighbors and see which model performs the best. The second approach is more common in practice. In an ensuing section on hyperparameter tuning, we will learn about different strategies for searching of model hyperparameters that result in improved model performance."
+    "Finally, how do we know how many nearest neighbors to use: 5, 7, 29? Well, it is not easy to answer that question. First, we can make an intuitive guess based on our understanding of the dataset, or second, we can run the model several times using different numbers of nearest neighbors and see which model performs the best. The second approach is more common in practice. In an ensuing section on hyperparameter tuning, we will learn about different strategies for searching for model hyperparameters that result in improved model performance."
    ]
   },
   {
@@ -4539,9 +4538,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we mentioned, **Random Forest** uses many decision trees (`n_estimators` below) to create a more robust model that has reduced overfitting on the data. Typically, using larger number of estimators results in improved performance, but increased computational cost. \n",
+    "As we mentioned, **Random Forest** uses many decision trees (`n_estimators` below) to create a more robust model that has reduced overfitting on the data. Typically, using a larger number of estimators results in improved performance, but increased computational cost. \n",
     "\n",
-    "In the next cell, we used 100 estimators (decision trees). The parameter `n_jobs` specify the number of CPU cores used for speeding up the model training by using parallel processing, where different cores can process different decision trees."
+    "In the next cell, we used 100 estimators (decision trees). The parameter `n_jobs` specifies the number of CPU cores used for speeding up the model training by using parallel processing, where different cores can process different decision trees."
    ]
   },
   {
@@ -4758,7 +4757,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Although the accuracy improved with different learning rate, the performance is still not very good. One reason may be because this algorithm is more sensitive to the range of input data, and we may need to scale the training data to obtain better performance. "
+    "Although the accuracy improved with a different learning rate, the performance is still not very good. One reason may be because this algorithm is more sensitive to the range of input data, and we may need to scale the training data to obtain better performance. "
    ]
   },
   {
@@ -4918,7 +4917,7 @@
    "source": [
     "### Linear Regression\n",
     "\n",
-    "Estimator functions in scikit-learn are implemented in a very simmilar way as the classification estimators. \n",
+    "Estimator functions in scikit-learn are implemented in a very similar way as the classification estimators. \n",
     "\n",
     "For instance, a Linear Regression estimator is imported and implemented in scikit-learn as follows."
    ]
@@ -6116,9 +6115,7 @@
    "source": [
     "## 13.4 Unsupervised Learning: Clustering <a id=\"13.4-unsupervised-learning:-clustering\"/>\n",
     "\n",
-    "**Unsupervised learning** algorithms employ data without labels, and often focus on finding similarities or patterns in the set of samples. Unsupervised learning comprises tasks such as *dimensionality reduction*, *clustering*, and *density estimation*. \n",
-    "\n",
-    "There are also *semi-supervised learning* approaches, where for example, unsupervised learning can be used to find informative features in data, and then these features can be used within a supervised learning framework."
+    "**Unsupervised learning** algorithms employ data without labels, and often focus on finding similarities or patterns in the set of samples. Unsupervised learning comprises tasks such as *dimensionality reduction*, *clustering*, and *density estimation*. "
    ]
   },
   {
@@ -6825,7 +6822,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the above examples, we worked only with accuracy as a performance metric, but other metrics that are also frequently used with prediction models. \n",
+    "In the above examples, we worked only with accuracy as a performance metric, but other metrics are also frequently used with prediction models. \n",
     "\n",
     "We will use the breast cancer dataset to explain the metrics. The dataset consists of diagnoses for 569 patients, and includes 30 features for each patient, which are shown below. The targets are the benign or malignant class, shown in the column `target` to the right."
    ]
@@ -7319,7 +7316,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Also, the function `classification_report` prints the precision, recall, f1-score, and accuracy for all classes. The reported averages include **macro average accuracy** (averaging the accuracy per each class), and **weighted average** (averaging the accuracy by using weights for each class based on the proportions of samples in each class). The suuport column shows the number of samples, i.e., rom the 171 samples in the test dataset, there are 64 benign and 107 malignant cases."
+    "Also, the function `classification_report` prints the precision, recall, f1-score, and accuracy for all classes. The reported averages include **macro average accuracy** (averaging the accuracy per each class), and **weighted average** (averaging the accuracy by using weights for each class based on the proportions of samples in each class). The support column shows the number of samples, i.e., from the 171 samples in the test dataset, there are 64 benign and 107 malignant cases."
    ]
   },
   {
@@ -7352,7 +7349,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And one more commonly used metric in binary classification is **Receiver Operating Characteristic (ROC)**. ROC curves are created by plotting the False Positive Rate (= $FP/(FP + TN)$)  on the x-axis and True Positive Rate (= $TP/(TP+FN)$, or sensitivity, racall) on the y-axis. The curve summarizes the trade-off between the True Positive Rate and False Positive Rate of the model using different probability thresholds. \n",
+    "And one more commonly used metric in binary classification is **Receiver Operating Characteristic (ROC)**. ROC curves are created by plotting the False Positive Rate (= $FP/(FP + TN)$)  on the x-axis and True Positive Rate (= $TP/(TP+FN)$, or sensitivity, recall) on the y-axis. The curve summarizes the trade-off between the True Positive Rate and False Positive Rate of the model using different probability thresholds. \n",
     "\n",
     "So far, we only used a threshold of 0.5, where predictions greater or equal to it are assigned the class label 1, and predictions smaller than 0.5 are assigned the class label 0. In binary classification, using different thresholds for the probability in predicting the class label of a data point changes the True Positive Rate and False Positive Rate. By changing the threshold value from 0 to 1 we can obtain many different points with True Positive Rate and False Positive Rate, and by connecting the different points we can plot the ROC curve. The curve allows to better interpret the results of the classifier.\n",
     "\n",
@@ -7734,7 +7731,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Because scikit-learn uses two-dimensional inputs, the images has been reshaped from 8x8 pixels into one long vector of 64 elements. "
+    "Because scikit-learn uses two-dimensional inputs, the images have been reshaped from 8x8 pixels into one long vector of 64 elements. "
    ]
   },
   {
@@ -8030,7 +8027,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
