--- a/docs/Lectures/Theme_3-Model_Engineering/Lecture_13-Scikit-Learn/Lecture_13-Scikit-Learn.ipynb
+++ b/docs/Lectures/Theme_3-Model_Engineering/Lecture_13-Scikit-Learn/Lecture_13-Scikit-Learn.ipynb
@@ -6649,7 +6649,9 @@
    "source": [
     "### 13.6.1 K-Fold Cross-Validation <a id=\"13.6.1-k-fold-cross-validation\"/>\n",
     "\n",
-    "**Cross-validation** involves repeating the training and testing procedure so that the training and testing sets are different each time. The values of the performance metrics are collected for each repetition and then aggregated. This allows to obtain an estimate of the variability of the model’s performance."
+    "**Cross-validation** involves repeating the training and testing procedure so that the training and testing sets are different each time. The values of the performance metrics are collected for each repetition and then aggregated. This allows to obtain an estimate of the variability of the model’s performance. Also, a single train-test split may lead to high variance in the performance due to the randomness in the data. By averageing the results across multiple folds, k-fold cross-validation provides a more stable and robust estimate of the model performance.\n",
+    "\n",
+    "Furthermore, when tuning hyperparameters, we often need to evaluate several combinations of hyperparameters to find the best set of hyperparameters. Rather than relying on a single train-test split for model evaluation, using k-fold cross-validation allows to evaluate the different combinations of hyperparameters on multiple subsets of the data. This strategy provides a more reliable measure of the model performance and enhances the process of tuning hyperparameters. "
    ]
   },
   {
