--- a/docs/Lectures/Theme_3-Model_Engineering/Lecture_13-Scikit-Learn/Lecture_13-Scikit-Learn.ipynb
+++ b/docs/Lectures/Theme_3-Model_Engineering/Lecture_13-Scikit-Learn/Lecture_13-Scikit-Learn.ipynb
@@ -397,6 +397,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -7288,6 +7289,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The following two figures provide a graphical representation of confusion matrix, precision, and recall, which can be helpful for understanding the meaning of these performance metrics.  \n",
+    "\n",
+    "<img src=\"images/confusion_matrix.png\" alt=\"Drawing\" width=\"600\"/>\n",
+    "<em>Figure: Confusion matrix.</em>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/precision_recall.png\" alt=\"Drawing\" width=\"500\"/>\n",
+    "<em>Figure: Precision and recall metrics.</em>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In scikit-learn, we can obtain the individual metrics as follows."
    ]
   },
@@ -8029,7 +8048,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
