--- a/docs/Lectures/Tutorials/Tutorial_10-Bash/Tutorial_10-Bash.ipynb
+++ b/docs/Lectures/Tutorials/Tutorial_10-Bash/Tutorial_10-Bash.ipynb
@@ -105,21 +105,21 @@
     "\n",
     "Commonly used Bash commands are:\n",
     "\n",
-    "`cd`: Change the directory to a different location.<br>\n",
-    "`ls`: List the contents of the current directory.<br>\n",
-    "`mkdir`: Create a new directory.<br>\n",
-    "`touch`: Create a new file.<br>\n",
-    "`rm`: Remove a file or directory.<br>\n",
-    "`cp`: Copy a file or directory.<br>\n",
-    "`mv`: Move or rename a file or directory.<br>\n",
-    "`echo`: Print text to the terminal.<br>\n",
-    "`cat`: Concatenate and print the contents of a file.<br>\n",
-    "`grep`: Search for a pattern in a file.<br>\n",
-    "`chmod`: Change the permissions of a file or directory.<br>\n",
-    "`sudo`: Run a command with administrative privileges.<br>\n",
-    "`df`: Display the amount of disk space available.<br>\n",
-    "`history`: Show a list of previously executed commands.<br>\n",
-    "`ps`: Display information about running processes.<br>\n"
+    "* `cd`: Change the directory to a different location.\n",
+    "* `ls`: List the contents of the current directory.\n",
+    "* `mkdir`: Create a new directory.\n",
+    "* `touch`: Create a new file.\n",
+    "* `rm`: Remove a file or directory.\n",
+    "* `cp`: Copy a file or directory.\n",
+    "* `mv`: Move or rename a file or directory.\n",
+    "* `echo`: Print text to the terminal.\n",
+    "* `cat`: Concatenate and print the contents of a file.\n",
+    "* `grep`: Search for a pattern in a file.\n",
+    "* `chmod`: Change the permissions of a file or directory.\n",
+    "* `sudo`: Run a command with administrative privileges.\n",
+    "* `df`: Display the amount of disk space available.\n",
+    "* `history`: Show a list of previously executed commands.\n",
+    "* `ps`: Display information about running processes."
    ]
   },
   {
@@ -218,12 +218,12 @@
     "1) Write `vi run_all.sh` to create a file named `run_all.sh`, where `vi` opens the vi editor, which is a text editor for Unix-like systems.\n",
     "2) In the opened text editor, insert the following commands and save the script:\n",
     "\n",
-    "    #!/bin/bash\n",
-    "    echo \"Today is \" `date`\n",
-    "    echo -e \"\\nenter the path to directory\"\n",
-    "    read the_path\n",
-    "    echo -e \"\\n your path has the following files and folders: \"\n",
-    "    ls $the_path\n"
+    "        #!/bin/bash\n",
+    "        echo \"Today is \" `date`\n",
+    "        echo -e \"\\nenter the path to directory\"\n",
+    "        read the_path\n",
+    "        echo -e \"\\n your path has the following files and folders: \"\n",
+    "        ls $the_path\n"
    ]
   },
   {
@@ -337,16 +337,16 @@
     "\n",
     "### Comparison Operators for Evaluating Integers\n",
     "\n",
-    "`-lt`: Less than (<)<br>\n",
-    "`-gt`: Greater than (>)<br>\n",
-    "`-le`: Less than or equal to (<=)<br>\n",
-    "`-e`: Greater than or equal to (>=)<br>\n",
-    "`-eq`: Equal to (==)<br>\n",
-    "`-ne`: Not equal to (!=)<br>\n",
+    "* `-lt`: Less than (<)<br>\n",
+    "* `-gt`: Greater than (>)<br>\n",
+    "* `-le`: Less than or equal to (<=)<br>\n",
+    "* `-e`: Greater than or equal to (>=)<br>\n",
+    "* `-eq`: Equal to (==)<br>\n",
+    "* `-ne`: Not equal to (!=)<br>\n",
     "\n",
     "### Logical Operators \n",
-    "`-a`: AND<br>\n",
-    "`-o`: OR<br>"
+    "* `-a`: AND<br>\n",
+    "* `-o`: OR<br>"
    ]
   },
   {
@@ -550,7 +550,7 @@
    "id": "4f77f8be",
    "metadata": {},
    "source": [
-    "Using Crontab:\n",
+    "**Using Crontab**\n",
     "\n",
     "The `crontab` utility allows add and edit cron jobs. For instance, `crontab -l` lists the scheduled jobs for a specific user. You can add or modify cron jobs with `crontab -e`."
    ]
@@ -560,7 +560,7 @@
    "id": "e7689600",
    "metadata": {},
    "source": [
-    "Batch Jobs:\n",
+    "**Batch Jobs**\n",
     "\n",
     "To start a single batch job, use `runbatch.sh [Input URL] [Output URL] []`. This command initiates a batch job with specified input and output URLs indicating where input data for the batch job is located, and where the output of the batch job will be saved.\n",
     "    \n",
