--- a/docs/Lectures/Tutorials/Tutorial_10-Bash/Tutorial_10-Bash.ipynb
+++ b/docs/Lectures/Tutorials/Tutorial_10-Bash/Tutorial_10-Bash.ipynb
@@ -5,7 +5,7 @@
    "id": "182c44d2",
    "metadata": {},
    "source": [
-    "# Tutorial 10 - Introduction to Bash Programming "
+    "# Tutorial 10 - Bash Scripting"
    ]
   },
   {
@@ -101,7 +101,7 @@
    "id": "846931c8",
    "metadata": {},
    "source": [
-    "Generally, commands follow this syntax: `command [OPTIONS] arguments`.\n",
+    "Generally, commands follow this syntax: `command [OPTIONAL] arguments`. The text `[OPTIONAL]` is for flags and inputs that are not required to run the command or that have default values. The text `arguments` is for flags or inputs that are required to run the command. These arguments must be supplied by the user or the command will not execute or produce an error. Flags start with the character `-`, such as the the flag `-v` to enable verbose mode. \n",
     "\n",
     "Commonly used Bash commands are:\n",
     "\n",
@@ -189,9 +189,9 @@
    "id": "e774d5c0",
    "metadata": {},
    "source": [
-    "`man + command`: Look up the details of the command in the command manual.\n",
+    "`man command`: Look up the details of the command in the command manual.\n",
     "\n",
-    "Example: manual for the command `ls` by `man + ls`.\n",
+    "Example: `man ls` provides the manual for the command `ls`.\n",
     "\n",
     "<img height=500 width=900 src=\"images/img8.png\">"
    ]
